# route-bridge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.bat  tsconfig.base.json
.github/workflows/: publish.yml
examples/express-next/backend/: .env.example  package.json  route-bridge.config.js  route-bridge.manifest.json
examples/express-next/backend/src/: index.ts
examples/express-next/frontend/: package.json  tsconfig.json
examples/express-next/frontend/pages/: index.tsx
examples/express-next/frontend/src/app/: layout.tsx  page.tsx
examples/flask-next/backend/: Makefile  app.py  requirements.txt  route-bridge.config.js  route-bridge.manifest.json
examples/flask-next/frontend/: package.json  tsconfig.json
examples/flask-next/frontend/pages/: index.tsx
examples/flask-next/frontend/src/app/: layout.tsx  page.tsx
python/: README.md  bridge.py  pyproject.toml  setup.py
python/flask_route_bridge/: __init__.py
python/tests/: test_bridge.py
scripts/: release.js  versions.js
